--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<html><head><title>NYUD-v2 Test</title>
+<html><head><title>Cityscapes-visualization Test</title>
 <script language="javascript" type="text/javascript" src="javascript/jquery.js"></script>
 <link rel="stylesheet" href="css/thickbox.css" type="text/css" media="screen" /></head>
 <body>
